[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pororo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "fairseq",
    "g2p-en",
    "joblib",
    "kss",
    "lxml",
    "marisa-trie",
    "nltk",
    "pillow",
    "sentence-transformers",
    "torch",
    "torchvision",
    "transformers",
    "wget",
    "whoosh",
    "word2word",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-runner",
]

[tool.setuptools.packages.find]
include = ["pororo*"]
exclude = ["assets*"]
